Fix gestures not showing on shelf

--- a/src/components/css/StrokeRecognizer.css
+++ b/src/components/css/StrokeRecognizer.css
@@ -6,7 +6,7 @@
   right: 0;
   opacity: 0.8;
   pointer-events: none;
-  z-index: 1;
+  z-index: 100000000;
 }
 
 :local(.Options) {
